--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -1,10 +1,13 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="login.css"/>
+</head>
 <div class="login-page">
     <div class="form">
     <form class="register-form">
       <input type="text" placeholder="name"/>
       <input type="password" placeholder="password"/>
       <input type="text" placeholder="email address"/>
-      <button>create</button>
+      <button>Create Account</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form class="login-form">
