updating details page

--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -1,22 +1,23 @@
 <div class="image-left">
 <img src="source" alt="Movie Poster Logo"/>
 
+<link rel="stylesheet" type="text/css" href="moviedetailspage.css"/>
 
 <div class="table">
   <table>
     <tr>
       <td>Title:</td>
-      <td>"text"</td>
+      <td>{{title}}</td>
     <tr>
       <td>Director:</td>
-      <td>"text"</td>
+      <td>{{director}}</td>  
     <tr>
-      <td>Starring:</td>
-      <td>"text"</td>  
+      <td>Spooky Rating:</td>
+      <td>{{rating}}</td>  
     <tr>
-      <td>Rating:</td>
-      <td>"text"</td>  
-      
-<div class="movieInfo">
-    <p>General Movie Information<p> </div>
+      <td>Genre:</td>
+      <td>{{genre}}</td> 
+    <tr>
+      <td>Plot Summary:</td>
+      <td>{{summary}}</td>   
   
