--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -2,6 +2,7 @@
 <img src="source" alt="Movie Poster Logo"/>
 
 <link rel="stylesheet" type="text/css" href="moviedetailspage.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet"/>
 
 <div class="table">
   <table>
@@ -20,4 +21,11 @@
     <tr>
       <td>Plot Summary:</td>
       <td>{{summary}}</td>   
-  
+ </table>
+
+    <form>
+        <div style="height:100px; width:180px; border:1p solid black; font:24px; font-family: Creepster; font-style: cursive; overflow:auto;"> {{user review}} </div>
+        <button>Submit</button>
+    </form>
+</div>
+
