Login page with gif background

--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -1,20 +1,223 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="login.css"/>
+  <link rel="stylesheet" type="text/css" href="login.css" />
 </head>
 <div class="login-page">
-    <div class="form">
+  <div class="form">
     <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
+      <input type="text" placeholder="name" />
+      <input type="password" placeholder="password" />
+      <input type="text" placeholder="email address" />
       <button>Create Account</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
+      <input type="text" placeholder="username" />
+      <input type="password" placeholder="password" />
       <button>login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
+  </div>
+</div>
+<div class="message">
+  <h1>Scream Cast</h1>
+  <span>A Spooky Movie Database</span>
+</div>
+
+<div class="b-layers">
+
+  <div class="b1">
+    <!--blocks-->
+    <div class="blocks">
+      <div class="block block-1">
+        <div class="pumpkins">
+          <!--p-->
+          <div class="pumpkin">
+            <div class="p-eye"></div>
+            <div class="p-nose"></div>
+            <div class="p-teeth"></div>
+          </div>
+          <!--p-->
+          <!--p-->
+          <div class="pumpkin">
+            <div class="p-eye"></div>
+            <div class="p-nose"></div>
+            <div class="p-teeth"></div>
+          </div>
+          <!--p-->
+        </div>
+      </div>
+      <div class="block block-2">
+        <div class="roof"></div>
+        <div class="mid">
+          <div class="windows">
+            <div class="win"></div>
+            <div class="win"></div>
+            <div class="win"></div>
+
+          </div>
+        </div>
+      </div>
+      <div class="block block-3">
+        <div class="tower">
+          <div class="windows">
+            <div class="win"></div>
+            <div class="win"></div>
+
+          </div>
+        </div>
+      </div>
+      <div class="block block-4"></div>
+      <div class="block block-5"></div>
+      <div class="block block-6"></div>
+    </div>
+    <!--blocks-->
+  </div>
+  <div class="b2"></div>
+  <div class="b3"></div>
+  <div class="b4">
+    <div class="bats">
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+      <!--new bat-->
+      <div class="haloween-bat">
+        <div class="h-left-wing">
+          <div class="l-wing"></div>
+        </div>
+        <div class="h-bat-body">
+          <div class="h-bt"></div>
+          <div class="h-bt"></div>
+        </div>
+        <div class="h-right-wing">
+          <div class="r-wing"></div>
+        </div>
+      </div>
+      <!--new bat-->
+    </div>
+    <div class="moon">
+    </div>
   </div>
 </div>
