--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -1,22 +1,25 @@
 <div class="image-left">
-<img src="source" alt="Movie Poster Logo"/>
+  <img src="source" alt="Movie Poster Logo" />
 
 
-<div class="table">
-  <table>
-    <tr>
-      <td>Title:</td>
-      <td>"text"</td>
-    <tr>
-      <td>Director:</td>
-      <td>"text"</td>
-    <tr>
-      <td>Starring:</td>
-      <td>"text"</td>  
-    <tr>
-      <td>Rating:</td>
-      <td>"text"</td>  
-      
-<div class="movieInfo">
-    <p>General Movie Information<p> </div>
-  
+  <div class="table">
+    <table>
+      <tr>
+        <td>Title:</td>
+        <td>"text"</td>
+      <tr>
+        <td>Director:</td>
+        <td>"text"</td>
+      <tr>
+        <td>Starring:</td>
+        <td>"text"</td>
+      <tr>
+        <td>Rating:</td>
+        <td>"text"</td>
+
+        <div class="movieInfo text-glow">
+
+          <p>General Movie Information
+          <p>
+        </div>
+        <script type="text/javascript" async src="moviedetailspage.js"></script>
