added html routes, moved css and webpage js files to 'public' folders, added html to 'main' to allow pages to render. Also removed some commented out code from my models. Added nodemon to package.json

--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -1,31 +1,32 @@
 <div class="image-left">
-<img src="source" alt="Movie Poster Logo"/>
+  <img src="source" alt="Movie Poster Logo" />
 
-<link rel="stylesheet" type="text/css" href="moviedetailspage.css"/>
-<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" type="text/css" href="/styles/moviedetailspage.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
 
-<div class="table">
-  <table>
-    <tr>
-      <td>Title:</td>
-      <td>{{title}}</td>
-    <tr>
-      <td>Director:</td>
-      <td>{{director}}</td>  
-    <tr>
-      <td>Spooky Rating:</td>
-      <td>{{rating}}</td>  
-    <tr>
-      <td>Genre:</td>
-      <td>{{genre}}</td> 
-    <tr>
-      <td>Plot Summary:</td>
-      <td>{{summary}}</td>   
- </table>
+  <div class="table">
+    <table>
+      <tr>
+        <td>Title:</td>
+        <td>{{title}}</td>
+      <tr>
+        <td>Director:</td>
+        <td>{{director}}</td>
+      <tr>
+        <td>Spooky Rating:</td>
+        <td>{{rating}}</td>
+      <tr>
+        <td>Genre:</td>
+        <td>{{genre}}</td>
+      <tr>
+        <td>Plot Summary:</td>
+        <td>{{summary}}</td>
+    </table>
 
     <form>
-        <div style="height:100px; width:180px; border:1p solid black; font:24px; font-family: Creepster; font-style: cursive; overflow:auto;"> {{user review}} </div>
-        <button>Submit</button>
+      <div
+        style="height:100px; width:180px; border:1p solid black; font:24px; font-family: Creepster; font-style: cursive; overflow:auto;">
+        {{user review}} </div>
+      <button>Submit</button>
     </form>
-</div>
-
+  </div>
