--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
 
-        <title>Screamcast!</title>
-        <meta name="description" content="">
-        <meta name="authors" content="">
+<head>
+    <meta charset="utf-8">
 
-        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css">
+    <title>Screamcast!</title>
+    <meta name="description" content="">
+    <meta name="authors" content="">
 
-    </head>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css">
 
-    <body>
-        // title of site in nav bar
-        <div class="header">
-            <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-                <a class="pure-menu-heading" href="">Your Site</a>
+</head>
 
-        // menu items in a list of 3 in nav bar
-        <ul class="pure-menu-list">
-            <li class="menu-item pure-menu-selected"><a href="#" class="menu-link">Text</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Text</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Text</a></li>
-        </ul>
+<body>
+    // title of site in nav bar
+    <div class="header">
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+            <a class="pure-menu-heading" href="">Your Site</a>
+
+            // menu items in a list of 3 in nav bar
+            <ul class="pure-menu-list">
+                <li class="menu-item pure-menu-selected"><a href="#" class="menu-link">Text</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">Text</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">Text</a></li>
+            </ul>
+        </div>
     </div>
-</div>
-        <script src=""></script>
-    </body>
+    <script type="text/javascript" src="/js/index.js"></script>
+</body>
+
 </html>
