--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -1,18 +1,18 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="login.css"/>
+  <link rel="stylesheet" type="text/css" href="/styles/login.css" />
 </head>
 <div class="login-page">
-    <div class="form">
+  <div class="form">
     <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
+      <input type="text" placeholder="name" />
+      <input type="password" placeholder="password" />
+      <input type="text" placeholder="email address" />
       <button>Create Account</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
+      <input type="text" placeholder="username" />
+      <input type="password" placeholder="password" />
       <button>login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
