--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -11,9 +11,9 @@
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form class="login-form">
-      <input type="text" placeholder="username" />
-      <input type="password" placeholder="password" />
-      <button>login</button>
+      <input type="text" id="username-input" placeholder="username" />
+      <input type="password" id="password-input" placeholder="password" />
+      <button type="submit">login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
   </div>
