committing after testing the login page without my file structure changes, commented out {{user review}} b/c it was breaking the page

--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -221,4 +221,4 @@
     </div>
   </div>
 </div>
-<script src="/js/loginpage.js"></script>
+<script type="text/javascript" async src="/js/loginpage.js"></script>
