--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -29,8 +29,9 @@
     <form>
       <div
         style="height:100px; width:180px; border:1p solid black; font:24px; font-family: Creepster; font-style: cursive; overflow:auto;">
-        {{user review}} </div>
-      <button>Submit</button>
+         {{!--There needs to be an input form here, with a text area and a limit on the amount of text they can input  --}}</div>
+      <button type="submit">Submit</button>
     </form>
   </div>
   <script type="text/javascript" async src="/js/moviedetailspage.js"></script>
+  
