--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="/views/layouts/login.css" />
+  <link rel="stylesheet" type="text/css" href="/styles/login.css" />
 </head>
 <div class="login-page">
   <div class="form">
