fixing index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
 
-        <title>Screamcast!</title>
-        <meta name="description" content="">
-        <meta name="authors" content="">
+<div class="buttons">
 
-        <link rel="stylesheet" href="">
+            <div class="action_btn">
 
-    </head>
+            <button name="submit" id="spooky" class="action_btn spooky" type="search" value="">Search Spooky Movies</button>
 
-    <body>
-        <script src=""></script>
-    </body>
+            <button name="submit" id="halloween" class="action_btn halloween" type="search" value="" >Search Halloween Movies</button>
+
+            </div>
+
+        </div>
+
 </html>
