--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,14 +3,16 @@
 
 <div class="buttons">
 
-            <div class="action_btn">
+    <div class="action_btn">
 
             <button name="submit" id="spooky" class="action_btn spooky" type="search" value="">Search Spooky Movies</button>
 
             <button name="submit" id="halloween" class="action_btn halloween" type="search" value="" >Search Halloween Movies</button>
 
-            </div>
+    </div>
 
-        </div>
+</div>
+
+<script type="text/javascript" src="/js/index.js"></script>
 
 </html>
