added a title csv for easy access info and updated handlebars for movie-list

--- a/views/movie-list.handlebars
+++ b/views/movie-list.handlebars
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Results</title>
 
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <link rel="stylesheet" type="text/css" href="movie-list.css"/>
 
 </head>
 <body>
 
-    <div class="table">
-        This is a placeholder to update changes
-        
-    </div>
-    
+<!--results page-->
+<!--IF they click spooky, THEN they will get this result-->
+{{#if spooky}}
+{{#if}}
+<!--IF they click halloween, THEN they will get this result-->
+{{#if halloween}}
+{{#if}}
 </body>
 </html>
