updating movie details page with user review box

--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+
+<body>
 <div class="image-left">
 <img src="source" alt="Movie Poster Logo"/>
 
@@ -35,3 +38,6 @@
         </div>
     </form>
 </div>
+<script type="text/javascript" async src="/js/moviedetailspage.js"></script>
+
+</body>
