--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 
 <body>
-<div class="image-left">
-<img src="source" alt="Movie Poster Logo"/>
+    <div class="image-left">
+        <img src="source" alt="Movie Poster Logo" />
 
-<link rel="stylesheet" type="text/css" href="moviedetailspage.css"/>
-<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="moviedetailspage.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-<div class="movie details">
-    <div class="table">
-    <table>
-        <tr>
-        <td>Title:</td>
-        <td>{{title}}</td>
-        <tr>
-        <td>Director:</td>
-        <td>{{director}}</td>  
-        <tr>
-        <td>Spooky Rating:</td>
-        <td>{{rating}}</td>  
-        <tr>
-        <td>Genre:</td>
-        <td>{{genre}}</td> 
-        <tr>
-        <td>Plot Summary:</td>
-        <td>{{summary}}</td>   
-    </table>
-    </div>
+        <div class="movie details">
+            <div class="table">
+                <table>
+                    <tr>
+                        <td>Title:</td>
+                        <td>{{title}}</td>
+                    <tr>
+                        <td>Director:</td>
+                        <td>{{director}}</td>
+                    <tr>
+                        <td>Spooky Rating:</td>
+                        <td>{{rating}}</td>
+                    <tr>
+                        <td>Genre:</td>
+                        <td>{{genre}}</td>
+                    <tr>
+                        <td>Plot Summary:</td>
+                        <td>{{summary}}</td>
+                </table>
+            </div>
 
-    <form>
-        <div class="form-group">
-            <label for="user-review">Leave Your Review:</label>
-                <textarea class="formcontrol" id="user-review" rows="20" cols="40"></textarea>
+            <form>
+                <div class="form-group">
+                    <label for="user-review">Leave Your Review:</label>
+                    <textarea class="formcontrol" id="user-review" rows="20" cols="40"></textarea>
 
-            <input class="submit" type="submit" value="Submit">
+                    <input class="submit" type="submit" value="Submit">
+                </div>
+            </form>
         </div>
-    </form>
-</div>
-<script type="text/javascript" async src="/js/moviedetailspage.js"></script>
+        <script type="text/javascript" async src="/js/moviedetailspage.js"></script>
 
 </body>
+</html>
