--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -4,7 +4,7 @@
     <div class="image-left">
         <img src="source" alt="Movie Poster Logo" />
 
-        <link rel="stylesheet" type="text/css" href="moviedetailspage.css" />
+        <link rel="stylesheet" type="text/css" href="/styles/moviedetailspage.css" />
         <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
