--- a/public/styles/moviedetailspage.css
+++ b/public/styles/moviedetailspage.css
@@ -1,7 +1,7 @@
 html {
   padding: 0 1em;
   font-family: "Courier New", Courier, monospace, sans-serif;
-  font-size: medium;
+  font-size: large;
 }
 
 .movieInfo.text-glow {
