--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,31 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <title>Screamcast!</title>
-    <!-- <meta name="description" content=""> -->
-    <!-- <meta name="authors" content=""> -->
+  <title>Screamcast!</title>
+  <!-- <meta name="description" content=""> -->
+  <!-- <meta name="authors" content=""> -->
 
-    <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="styles/index.css">
 
 </head>
 
 <body>
-    <div class="buttons">
+  <div class="buttons">
 
-      <div class="action_btn">
+    <div class="action_btn">
 
-            <button name="submit" id="spooky" class="action_btn spooky" type="search" value="">Search Spooky Movies</button>
+      <button name="submit" id="spooky" class="action_btn spooky" type="search" value="">Search Spooky Movies</button>
 
-            <button name="submit" id="halloween" class="action_btn halloween" type="search" value="" >Search Halloween Movies</button>
-
-      </div>
+      <button name="submit" id="halloween" class="action_btn halloween" type="search" value="">Search Halloween
+        Movies</button>
 
     </div>
 
+  </div>
 
-<script type="text/javascript" src="/js/index.js"></script>
+
+  <script type="text/javascript" src="/js/index.js"></script>
 
 </body>
+
 </html>
