--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -1,24 +1,20 @@
-<head>
-  <link rel="stylesheet" type="text/css" href="/styles/login.css" />
-</head>
+<link rel="stylesheet" type="text/css" href="styles/login.css" />
 <div class="login-page">
-  <div class="form">
-    <form class="register-form">
-      <input type="text" placeholder="name" />
-      <input type="password" placeholder="password" />
-      <input type="text" placeholder="email address" />
-      <button>Create Account</button>
-      <p class="message">Already registered? <a href="#">Sign In</a></p>
-    </form>
-    <form class="login-form">
-      <input type="text" id="username-input" placeholder="username" />
-      <input type="password" id="password-input" placeholder="password" />
-      <button type="submit">login</button>
-      <p class="message">Not registered? <a href="#">Create an account</a></p>
-    </form>
+  <div class="container-form">
+    <div class="form">
+      <form class="register-form">
+        <input type="text" placeholder="name" />
+        <input type="password" placeholder="password" />
+        <input type="text" placeholder="email address" />
+        <button>Create Account</button>
+        <p class="message">Already registered? <a href="#">Sign In</a></p>
+      </form>
+      <form class="login-form">
+        <input type="text" id="username-input" placeholder="username" />
+        <input type="password" id="password-input" placeholder="password" />
+        <button type="submit">login</button>
+        <p class="message">Not registered? <a href="#">Create an account</a></p>
+      </form>
+    </div>
   </div>
-</div>
-<div class="message">
-  <h1>Scream Cast</h1>
-  <span>A Spooky Movie Database</span>
 </div>
