--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="styles/login.css" />
+<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 <div class="login-page">
   <div class="container-form">
     <div class="form">
@@ -12,9 +13,11 @@
       <form class="login-form">
         <input type="text" id="username-input" placeholder="username" />
         <input type="password" id="password-input" placeholder="password" />
-        <button type="submit">login</button>
-        <p class="message">Not registered? <a href="#">Create an account</a></p>
+        <button type="submit">Login</button>
+        <br>
+        <button type="submit">Create Account</button>
       </form>
     </div>
   </div>
+</div>
 </div>
