Edited movie model spooky rating to 1 digit, 1 decimal place. Added html and api routes for movie-list.handlebars and index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,15 +11,20 @@
   <link rel="stylesheet" href="styles/index.css">
 
 </head>
+
 <body>
   <div class="buttons">
 
     <div class="action_btn">
 
-      <button name="submit" id="spooky" class="action_btn spooky" type="search" value="">Search Spooky Movies</button>
+      <a href="/spookymovies">
+        <button name="submit" id="spooky" class="action_btn spooky" type="search" value="">Search Spooky Movies</button>
+      </a>
 
-      <button name="submit" id="halloween" class="action_btn halloween" type="search" value="">Search Halloween
-        Movies</button>
+      <a href="/halloweenmovies">
+        <button name="submit" id="halloween" class="action_btn halloween" type="search" value="">Search Halloween
+          Movies</button>
+      </a>
 
     </div>
 
