--- a/views/movie-list.handlebars
+++ b/views/movie-list.handlebars
@@ -7,14 +7,18 @@
     <title>Search Results</title>
     <link rel="stylesheet" type="text/css" href="styles/movie-list.css" />
 </head>
+
 <body>
-<!--results page-->
-<!--IF they click spooky, THEN they will get this result-->
-{{#if spooky}}
-{{#if}}
-<!--IF they click halloween, THEN they will get this result-->
-{{#if halloween}}
-{{#if}}
+    <!--results page-->
+    <!--IF they click spooky, THEN they will get this result-->
+
+    {{#if spooky}}
+    <div>oh dang lookit all them spooky movies</div>
+    {{/if}}
+    <!--IF they click halloween, THEN they will get this result-->
+    {{#if halloween}}
+    <div>oh dang lookit all them halloweeny movies</div>
+    {{/if}}
 </body>
 
 </html>
