updated movie-list handlebars file

--- a/views/movie-list.handlebars
+++ b/views/movie-list.handlebars
@@ -19,7 +19,8 @@
 {{#if}}
 <!--IF they click halloween, THEN they will get this result-->
 {{#if halloween}}
-    {{>}}
+    {{> }}
+     <button>Details</button>
 {{#if}}
 </body>
 </html>
