adding reviews display section

--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -8,7 +8,7 @@
   </head>
 <body>
 <div class="movieInfo text-glow">
-    <h1>General Movie Information
+    <h1>Boo!
     </h1>
   </div>
     <div class="image-left">
@@ -43,6 +43,13 @@
                     <input class="submit" type="submit" value="Submit">
                 </div>
             </form>
+
+            <div data-spy="scroll" data-target="#list" data-offset="0" class="scrollspy">
+                <h4 id="review-1">User Review:</h4>
+                <p>{{user-review-1}}</p>
+                <h4 id="review-2">User Review:</h4>
+                <p>{{user-review-2}}</p>
+            </div>
         </div>
         <script type="text/javascript" async src="/js/moviedetailspage.js"></script>
 
