--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -12,26 +12,26 @@
     </h1>
   </div>
     <div class="image-left">
-        <img src="source" alt="Movie Poster Logo"/>
+        <img src={{dataValues.posterImg}} alt="Movie Poster Logo"/>
         <div class="movie details">
         
             <div class="table">
                 <table>
                     <tr>
                         <td>Title:</td>
-                        <td>{{title}}</td>
+                        <td>{{dataValues.title}}</td>
                     <tr>
                         <td>Director:</td>
-                        <td>{{director}}</td>
+                        <td>{{dataValues.director}}</td>
                     <tr>
                         <td>Spooky Rating:</td>
-                        <td>{{rating}}</td>
+                        <td>{{dataValues.spookyRating}}</td>
                     <tr>
                         <td>Genre:</td>
-                        <td>{{genre}}</td>
+                        <td>{{dataValues.genre1}} {{dataValues.genre2}}</td>
                     <tr>
                         <td>Plot Summary:</td>
-                        <td>{{summary}}</td>
+                        <td>{{dataValues.plot}}</td>
                 </table>
             </div>
 
