small tweaks, need to commit to switch to passport

--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -12,7 +12,7 @@
     </h1>
   </div>
     <div class="image-left">
-        <img src={{dataValues.posterImg}} alt="Movie Poster Logo"/>
+        <img src={{dataValues.posterImg}} alt="Movie Poster"/>
         <div class="movie details">
         
             <div class="table">
@@ -46,9 +46,9 @@
 
             <div data-spy="scroll" data-target="#list" data-offset="0" class="scrollspy">
                 <h4 id="review-1">User Review:</h4>
-                <p>{{user-review-1}}</p>
+                <p>{{!user-review-1}}</p>
                 <h4 id="review-2">User Review:</h4>
-                <p>{{user-review-2}}</p>
+                <p>{{!user-review-2}}</p>
             </div>
         </div>
         <script type="text/javascript" async src="/js/moviedetailspage.js"></script>
