--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -3,56 +3,58 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles/moviedetailspage.css" />
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  </head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
+
 <body>
-<div class="movieInfo text-glow">
+  <div class="movieInfo text-glow">
     <h1>Boo!
     </h1>
   </div>
-    <div class="image-left">
-        <img src={{dataValues.posterImg}} alt="Movie Poster"/>
-        <div class="movie details">
-        
-            <div class="table">
-                <table>
-                    <tr>
-                        <td>Title:</td>
-                        <td>{{dataValues.title}}</td>
-                    <tr>
-                        <td>Director:</td>
-                        <td>{{dataValues.director}}</td>
-                    <tr>
-                        <td>Spooky Rating:</td>
-                        <td>{{dataValues.spookyRating}}</td>
-                    <tr>
-                        <td>Genre:</td>
-                        <td>{{dataValues.genre1}} {{dataValues.genre2}}</td>
-                    <tr>
-                        <td>Plot Summary:</td>
-                        <td>{{dataValues.plot}}</td>
-                </table>
-            </div>
+  <div class="image-left">
+    <img src={{dataValues.posterImg}} alt="Movie Poster" />
+    <div class="movie details">
 
-            <form>
-                <div class="form-group">
-                    <label for="user-review">Leave Your Review:</label>
-                    <textarea class="formcontrol" id="user-review" rows="20" cols="40"></textarea>
+      <div class="table">
+        <table>
+          <tr>
+            <td>Title:</td>
+            <td>{{dataValues.title}}</td>
+          <tr>
+            <td>Director:</td>
+            <td>{{dataValues.director}}</td>
+          <tr>
+            <td>Spooky Rating:</td>
+            <td>{{dataValues.spookyRating}}</td>
+          <tr>
+            <td>Genre:</td>
+            <td>{{dataValues.genre1}} {{dataValues.genre2}}</td>
+          <tr>
+            <td>Plot Summary:</td>
+            <td>{{dataValues.plot}}</td>
+        </table>
+      </div>
 
-                    <input class="submit" type="submit" value="Submit">
-                </div>
-            </form>
+      <form action="/api/review/{{dataValues.id}}" method="POST">
+        <div class="form-group">
+          <label for="user-review">Leave Your Review:</label>
+          <textarea class="formcontrol" id="user-review" name="reviewText" rows="20" cols="40"></textarea>
 
-            <div data-spy="scroll" data-target="#list" data-offset="0" class="scrollspy">
-                <h4 id="review-1">User Review:</h4>
-                <p>{{!user-review-1}}</p>
-                <h4 id="review-2">User Review:</h4>
-                <p>{{!user-review-2}}</p>
-            </div>
+          <input class="submit" type="submit" value="Submit">
+          {{!-- TODO: create formcontrol div for spookyRating - please use 'name=spookyRating' --}}
         </div>
-        <script type="text/javascript" async src="/js/moviedetailspage.js"></script>
+      </form>
+
+      <div data-spy="scroll" data-target="#list" data-offset="0" class="scrollspy">
+        <h4 id="review-1">User Review:</h4>
+        <p>{{!user-review-1}}</p>
+        <h4 id="review-2">User Review:</h4>
+        <p>{{!user-review-2}}</p>
+      </div>
+    </div>
+    <script type="text/javascript" async src="/js/moviedetailspage.js"></script>
 
 </body>
-</html>
 
+</html>
