--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  </head>
+</head>
 <body>
 <div class="movieInfo text-glow">
     <h1>Boo!
@@ -38,7 +38,19 @@
             <form>
                 <div class="form-group">
                     <label for="user-review">Leave Your Review:</label>
-                    <textarea class="formcontrol" id="user-review" rows="20" cols="40"></textarea>
+                        <textarea class="formcontrol" id="user-review" rows="20" cols="40">
+                        </textarea>
+
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Spooky Rating</button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="rating-1" href="#">1</a>
+                                <a class="rating-2" href="#">2</a>
+                                <a class="rating-3" href="#">3</a>
+                                <a class="rating-4" href="#">4</a>
+                                <a class="rating-5" href="#">5</a>
+                            </div>
+                    </div>
 
                     <input class="submit" type="submit" value="Submit">
                 </div>
