added dropdown menu

--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -41,14 +41,14 @@
                         <textarea class="formcontrol" id="user-review" rows="20" cols="40">
                         </textarea>
 
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Spooky Rating</button>
+                    <div class="dropdown">Spooky Rating:
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">1 = Not Spooky</button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="rating-1" href="#">1</a>
-                                <a class="rating-2" href="#">2</a>
-                                <a class="rating-3" href="#">3</a>
-                                <a class="rating-4" href="#">4</a>
-                                <a class="rating-5" href="#">5</a>
+                                <a class="rating-1" href="#">1 = Not Spooky</a>
+                                <a class="rating-2" href="#">2 = Somewhat Spooky</a>
+                                <a class="rating-3" href="#">3 = Spooky</a>
+                                <a class="rating-4" href="#">4 = Pretty Spooky</a>
+                                <a class="rating-5" href="#">5 = Very Spooky</a>
                             </div>
                     </div>
 
