--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -3,13 +3,13 @@
 <div class="login-page">
   <div class="container-form">
     <div class="form">
-      <form class="register-form">
+      {{!-- <form class="register-form">
         <input type="text" placeholder="name" />
         <input type="password" placeholder="password" />
         <input type="text" placeholder="email address" />
         <button>Create Account</button>
         <p class="message">Already registered? <a href="#">Sign In</a></p>
-      </form>
+      </form> --}}
       <form class="login-form">
         <input type="text" id="username-input" placeholder="username" />
         <input type="password" id="password-input" placeholder="password" />
