--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -3,9 +3,10 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles/moviedetailspage.css" />
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
+
 <body>
   <div class="movieInfo text-glow">
     <h1>Boo!
@@ -40,16 +41,17 @@
           <label for="user-review">Leave Your Review:</label>
           <textarea class="formcontrol" id="user-review" name="reviewText" rows="20" cols="40"></textarea>
 
-        <div class="dropdown">Spooky Rating:
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">1 = Not Spooky</button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="rating-1" href="#">1 = Not Spooky</a>
-                    <a class="rating-2" href="#">2 = Somewhat Spooky</a>
-                    <a class="rating-3" href="#">3 = Spooky</a>
-                    <a class="rating-4" href="#">4 = Pretty Spooky</a>
-                    <a class="rating-5" href="#">5 = Very Spooky</a>
-                </div>
-        </div>
+          <div class="dropdown">Spooky Rating:
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">1 = Not Spooky</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="rating-1" href="#">1 = Not Spooky</a>
+              <a class="rating-2" href="#">2 = Somewhat Spooky</a>
+              <a class="rating-3" href="#">3 = Spooky</a>
+              <a class="rating-4" href="#">4 = Pretty Spooky</a>
+              <a class="rating-5" href="#">5 = Very Spooky</a>
+            </div>
+          </div>
           <input class="submit" type="submit" value="Submit">
           {{!-- TODO: create formcontrol div for spookyRating - please use 'name=spookyRating' --}}
         </div>
@@ -63,6 +65,12 @@
       </div>
     </div>
     <script type="text/javascript" async src="/js/moviedetailspage.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"></script>
 
 </body>
 
