--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -9,7 +9,7 @@
 
 <body>
   <div class="movieInfo text-glow">
-    <h1>Boo!
+    <h1>Summon Your Scare!
     </h1>
   </div>
   <div class="image-left">
