--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -13,4 +13,7 @@ body {
   margin: auto;
   max-width: 42em;
   background-image: url("spiders\ \(1\).gif");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-color: #182725;
 }
