testing rating function, committing to merge new css, removed some comments and added some

--- a/public/styles/moviedetailspage.css
+++ b/public/styles/moviedetailspage.css
@@ -1,22 +1,22 @@
 html {
   padding: 0 1em;
-  font-family: "Creepster", cursive;
+  font-family: 'Creepster', cursive;
   font-size: large;
 }
 
 h1.movieInfo.text-glow {
-  font-family: "Creepster", cursive;
+  font-family: 'Creepster', cursive;
   text-shadow: 1px 1px 15px white;
 }
 
 table {
-  font-family: "Creepster", cursive;
+  font-family: 'Creepster', cursive;
   font-size: large;
 }
 body {
   margin: auto;
   background-color: #623baa;
-  background-image: url("Scarytree.png");
+  background-image: url('Scarytree.png');
   background-position: right;
 }
 
@@ -41,16 +41,16 @@ img {
 
   /* clearfix for fallback */
   .image-left::after {
-    content: "";
+    content: '';
     display: block;
     clear: both;
   }
 }
 
 h4 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-size: medium;
-  color: ;
+  /*color: ;*/
 }
 @media (min-width: 30em) {
   .image-left img {
@@ -60,5 +60,5 @@ h4 {
 
 .form-button {
   color: #25c570;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
