various styling changes

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -4,16 +4,31 @@
   display: inline;
 }
 
-.action_btn {
+.action_btn spooky {
   width: 200px;
   margin: 0 auto;
   display: inline;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: large;
+  color: #61b880;
+}
+
+.action_btn halloween {
+  width: 200px;
+  margin: 0 auto;
+  display: inline;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: large;
+  color: #61b880;
+  margin-right: -300px;
 }
 body {
   margin: auto;
   max-width: 42em;
   background-image: url("spiders\ \(1\).gif");
-  background-repeat: no-repeat;
   background-size: 100%;
+  background-repeat: no-repeat;
   background-color: #182725;
+  margin-left: 500px;
+  margin-top: 600px;
 }
