--- a/views/movie-list.handlebars
+++ b/views/movie-list.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Results</title>
+    <title>Prepare For Your Scare!</title>
     <link rel="stylesheet" type="text/css" href="styles/movie-list.css" />
 </head>
 
