fixed button issues index.css

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,13 +1,33 @@
-.buttons {
+.action_btn {
   width: 200px;
   margin: 0 auto;
   display: inline;
 }
 
-.action_btn {
+.h1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 30px;
+  color:#3fd2bd; 
+  margin right: -600px;
+  text-align: center;
+}
+.action_btn spooky {
   width: 200px;
   margin: 0 auto;
   display: inline;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: large;
+  color: #61b880;
+}
+
+.action_btn halloween {
+  width: 200px;
+  margin: 0 auto;
+  display: inline;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: large;
+  color: #61b880;
+  margin-right: -300px;
 }
 body {
   margin: auto;
@@ -16,4 +36,6 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-color: #182725;
+  margin-left: 500px;
+  margin-top: 600px;
 }
