--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,15 +4,16 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Screamcast!</title>
+  <title>Summoning Your Scare...</title>
   <!-- <meta name="description" content=""> -->
   <!-- <meta name="authors" content=""> -->
-
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/index.css">
 
 </head>
 
 <body>
+  <h1>Find the Perfect Scare for Your Screen!</h1>
   <div class="buttons">
 
     <div class="action_btn">
