--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -2,6 +2,9 @@
   width: 200px;
   margin: 0 auto;
   display: inline;
+  display: flex;
+  justify-content: center;
+  background-color: #3fd2bd;
 }
 
 .h1 {
