--- a/views/moviedetailspage.handlebars
+++ b/views/moviedetailspage.handlebars
@@ -22,6 +22,10 @@
             <td>Title:</td>
             <td>{{movie.title}}</td>
           <tr>
+            <td>Year:</td>
+            <td>{{movie.year}}</td>
+          <tr>
+          <tr>
             <td>Spooky Rating:</td>
             <td>{{movie.spookyRating}}</td>
           <tr>
